# VenueIQ-Ops-Control

./: .env.example  .gitignore  README.md  docker-compose.yml
frontend/attendee-app/: .env.local.example  index.html  package-lock.json  package.json  vite.config.js
frontend/attendee-app/src/: App.jsx  index.css
frontend/attendee-app/src/components/: ConfidenceBadge.jsx  NotificationBanner.jsx  SearchBar.jsx  StadiumHeatmap.jsx
frontend/attendee-app/src/config/: firebase.js  maps.js
frontend/attendee-app/src/hooks/: useZoneDensity.js
frontend/ops-dashboard/: .env.local.example  Dockerfile  index.html  package-lock.json  package.json
frontend/ops-dashboard/src/: App.jsx  index.css
frontend/ops-dashboard/src/components/: AlertFeed.jsx  LiveStatsTable.jsx  WhatIfPanel.jsx  ZoneGrid.jsx
frontend/ops-dashboard/src/config/: firebase.js
frontend/ops-dashboard/src/hooks/: useZoneDensity.js
infra/terraform/: bigquery.tf  cloudrun.tf  iam.tf  main.tf  outputs.tf  pubsub.tf  secrets.tf  terraform.tfvars.example  variables.tf
ml/model/: Dockerfile  dataset.py  model.py  requirements.txt  serve.py  train.py
ml/model/tests/unit/: test_model.py
services/ingestion/: Dockerfile  pyproject.toml  test_out.txt
services/ingestion/app/: fallback.py  main.py  models.py  publisher.py  zone_map.py
services/notification/: Dockerfile  pyproject.toml  test_log.txt  test_request.json
services/notification/app/: main.py  models.py  notifier.py  simulator.py
services/prediction/: Dockerfile  pyproject.toml
services/prediction/app/: main.py
(+2 files in other folders)
